--- a/src/apps/client/ui/components/Carousel/Carousel.css
+++ b/src/apps/client/ui/components/Carousel/Carousel.css
@@ -12,6 +12,8 @@
     position: relative;
     width: 9999px;
     left: 0;
+    display: flex;
+    align-items: flex-start;
 
     @media (max-width: 1024px) {
         &:active {
