--- a/src/apps/client/ui/components/PopupGallery/PopupGallery.css
+++ b/src/apps/client/ui/components/PopupGallery/PopupGallery.css
@@ -6,10 +6,9 @@
     position: fixed;
     left: 0;
     top: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     z-index: 11;
-    overflow-y: scroll;
 }
 
 .cover {
@@ -37,19 +36,19 @@
 }
 
 .popup {
-    display: inline-block;
+    display: inline-flex;
     vertical-align: middle;
     position: relative;
     width: calc(100% - 120px);
-    padding: 114px 60px;
+    max-width: 1240px;
+    max-height: 100vh;
+    padding: 62px 0;
 }
 
 .popupContent {
     position: relative;
     font: 18px/21px GilroyRegular;
-    border: 1px solid red;
     width: 100%;
-    max-width: 1240px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -59,10 +58,12 @@
 
 .gallery {
     width: 100%;
+    height: calc(100% - 62px);
 }
 
 .sliderWrap {
     position: relative;
+    height: 100%;
 
     &:hover {
         .tools {
@@ -80,6 +81,7 @@
     flex-shrink: 0;
     overflow: hidden;
     width: 100%;
+    height: 100%;
 
     @media (max-width: 1024px) {
         &:active {
@@ -91,15 +93,19 @@
 .mainImgWrap {
     width: 100%;
     min-width: 100%;
-    display: flex;
-    justify-content: center;
+    height: 100%;
+    display: inline-block;
+    vertical-align: middle;
 }
 
 .mainImg {
-    height: auto;
     flex-shrink: 0;
     z-index: -1;
     max-width: 100%;
+    max-height: 100%;
+    position: relative;
+    top: 50%;
+    transform: translate(0, -50%);
 }
 
 .slider{
@@ -109,6 +115,7 @@
     display: flex;
     align-items: flex-start;
     width: 100%;
+    height: 100%;
 }
 
 .arrowLeft, .arrowRight {
@@ -152,7 +159,6 @@
 .additionalImgs {
     display: flex;
     flex-wrap: wrap;
-    padding: 0 100px;
     justify-content: center;
 
     @media (max-width: 600px) {
@@ -162,9 +168,14 @@
 }
 
 .additionalImgWrap {
-    width: calc(100% / 7);
+    width: 113px;
+    max-height: 62px;
     cursor: pointer;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
 
     &:before {
         content: '';
@@ -214,7 +225,7 @@
     padding: 10px;
     cursor: pointer;
     position: absolute;
-    top: -80px;
+    top: -55px;
     right: 10px;
 
     &:after {
