--- a/src/apps/client/ui/components/PopupColor/PopupColor.css
+++ b/src/apps/client/ui/components/PopupColor/PopupColor.css
@@ -68,6 +68,10 @@
     @media (max-width: 600px) {
         padding: 50px 15px 26px 15px;
     }
+
+    @media (max-width: 600px) {
+        padding-bottom: 15px;
+    }
 }
 
 .title {
@@ -218,34 +222,53 @@
     }
 }
 
-.numbers {
+.info {
+    position: absolute;
+    margin-top: 15px;
+    display: flex;
+    justify-content: space-between;
+    width: calc(100% - 72px);
     margin-top: 20px;
-    text-align: center;
 
     @media (max-width: 600px) {
+        width: 100%;
+    }
+
+    @media (max-width: 410px) {
         margin-top: 10px;
     }
 }
 
-.article {
-    position: absolute;
-    left: 36px;
-    bottom: 0;
+.numbers {
+}
 
-    @media (max-width: 600px) {
-        left: 0;
+.article {
+}
+
+.buttonChangeColor {
+    @mixin removeDefaultButton;
+    font: 500 18px/21px GilroyRegular;
+    color: whiteBasic;
+    padding: 6px 20px;
+    background: blackLight;
+    margin-top: 15px;
+    cursor: pointer;
+    z-index: 1;
+
+    @media (max-width: 410px) {
+        margin-top: 41px;
     }
 }
 
 .close {
     padding: 10px;
     cursor: pointer;
-    position: absolute;
     top: 10px;
     right: 10px;
+    position: absolute;
 
     &:after {
-      content: url("./img/close.svg");
+        content: url("./img/close.svg");
     }
 
     @media (max-width: 600px) {
