--- a/src/apps/client/ui/components/MainCategories/MainCategories.css
+++ b/src/apps/client/ui/components/MainCategories/MainCategories.css
@@ -37,8 +37,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    min-height: 250px;
 
     @media (max-width: 400px) {
+        min-height: unset;
         height: 187px;
     }
 }
