--- a/src/apps/client/ui/components/Footer/Footer.css
+++ b/src/apps/client/ui/components/Footer/Footer.css
@@ -106,6 +106,7 @@
         align-items: center;
         text-align: center;
         margin: 20px 0 20px;
+        height: 410px;
     }
 
     &:after {
