add second column title

--- a/src/apps/client/ui/components/PopupSizes/PopupSizes.css
+++ b/src/apps/client/ui/components/PopupSizes/PopupSizes.css
@@ -114,7 +114,10 @@
 .rowWrap {
     &:first-child {
         .rowTitle {
-            display: block;
+            display: flex;
+            width: 66%;
+            justify-content: space-between;
+
         }
     }
 }
