--- a/src/apps/client/ui/components/CallbackCall/CallbackCall.css
+++ b/src/apps/client/ui/components/CallbackCall/CallbackCall.css
@@ -1,9 +1,49 @@
 .phoneIcon {
     position: fixed;
-    right: 20px;
-    bottom: 20px;
-    width: 100px;
-    height: 100px;
-    background-color: green;
+    right: 60px;
+    bottom: 60px;
+    width: 64px;
+    height: 64px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #25716C;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
+    border-radius: 50%;
     cursor: pointer;
+    z-index: 90;
+    transition: all 0.5s ease;
+    @media (max-width: 1000px) {
+        right: 16px;
+        bottom: 16px;
+        width: 48px;
+        height: 48px;
+    }
+
+    &:hover {
+        background: #FFF;
+        .phone {
+            path {
+                fill: #25716C;
+            }
+        }
+    }
 }
+.phone {
+    transition: all 0.5s ease-in;
+    path {
+        fill: #FFF; 
+    }
+}
+
+.imgWrap {
+    width: 24px;
+    height: 24px;
+    font-size: 0;
+    user-select: none;
+    @media (max-width: 1000px) {
+        width: 18px;
+        height: 18px;
+    }
+}
+
