fix existText position in AboutProduct

--- a/src/apps/client/ui/components/AboutProduct/AboutProduct.css
+++ b/src/apps/client/ui/components/AboutProduct/AboutProduct.css
@@ -63,10 +63,10 @@
 .existText {
     display: inline-block;
     font: 14px/16px GilroyRegular;
-    text-align: center;
+    text-align: left;
     color: #25716C;
     align-self: center;
-    margin-right: 105px;
+    width: 173px;
     @media (max-width: 1000px) {
         display: none;
     }
@@ -74,7 +74,6 @@
 
 .notExist {
     color: #DC4E41;
-    margin-right: 107px;
 }
 
 .properties {
