--- a/src/apps/client/ui/components/CallbackForm/CallbackForm.css
+++ b/src/apps/client/ui/components/CallbackForm/CallbackForm.css
@@ -76,56 +76,97 @@
 
 .dataField {
     width: 100%;
-    margin-top: 29px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
     flex-direction: column;
-    button {
-        font: 16px/19px GilroyRegular;
-        letter-spacing: 0.02em;
-        border: none;
-        color: #FFF;
-        margin-top: 37px;
-        background: #232323;
-        padding: 13px 87px;
-    }
 }
 .form {
     position: relative;
     width: 71%;
-    height: 45px;
-    margin-bottom: 24px;
+    height: 250px;
     overflow: hidden;
 
     input {
         font: 16px/19px GilroyRegular;
         color: #232323;
         width: 100%;
-        height: 100%;
+        height: 45px;
+        margin-top: 24px;
+        &:first-child {
+            margin-top: 29px;
+        }
         padding-top: 20px;
         border: none;
         outline: none;
     }
 
     input:focus + .labelName .contentName,
-    input:valid + .labelName .contentName {
+    input:valid + .labelName .contentName,
+    input:focus + .labelPhone .contentName,
+    input:valid + .labelPhone .contentName {
         transform: translateY(-150%);
         font: 12px/14px GilroyRegular;
         color: #919191;
     }
+}
+label {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 45px;
+    pointer-events: none;
+    border-bottom: 1px solid #000;
+}
+.labelName {
+    margin-top: 29px;
+}
+.labelPhone {
+    margin-top: 24px;
+}
+.errorBorder {
+    border-bottom: 1px solid red;
+}
+.errorMessage {
+    margin-top: 10px;
+    color: red;
+    font: 13px/15px GilroyRegular;
+    text-align: left;
+}
 
-    label {
-        position: absolute;
-        bottom: 0px;
-        left: 0%;
+.submit {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    font: 16px/19px GilroyRegular;
+    letter-spacing: 0.02em;
+    border: none;
+    color: #FFF;
+    background: #232323;
+    padding: 13px 87px;
+    cursor: pointer;
+    img {
         width: 100%;
         height: 100%;
-        pointer-events: none;
-        border-bottom: 1px solid #000;
-
     }
-
+}
+.successfulSubmit {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    width: 100%;
+    height: 45px;
+    font-size: 0;
+    outline: none;
+    border: 1px solid black;
+    background: #FFF;
+    img {
+        width: 24px;
+        height: 24px;
+    }
 }
 .contentName {
     position: absolute;
