--- a/src/apps/client/ui/components/AboutProduct/AboutProduct.css
+++ b/src/apps/client/ui/components/AboutProduct/AboutProduct.css
@@ -133,9 +133,16 @@
     }
 }
 
+
+
+.aboutProduct {
+    .activeOption, .option {
+        min-width: 202px;
+    }
+}
+
 .activeOption, .option{
     height: 30px;
-    min-width: 202px;
     padding: 5px 30px 4px 9px;
     position: relative;
     display: inline-block;
@@ -413,5 +420,132 @@
         background-image: url('./img/wishlist-active.png');
         background-color: whiteBasic;
         border-color: gray3;
+    }
+}
+
+.shareInfoWrap {
+    position: relative;
+    margin-left: 54px;
+}
+
+.shareInfo {
+    position: absolute;
+    bottom: calc(100% + 11px);
+    right: 0;
+    background: whiteBasic;
+    box-shadow: 0px 0px 8px rgba(37, 113, 108, 0.2);
+    width: 252px;
+    padding: 10px 16px;
+
+    &:after {
+        position: absolute;
+        right: 12px;
+        bottom: -16px;
+        content: '';
+        border-style: solid;
+        border-width: 22px 11px 0 11px;
+        border-color: whiteBasic transparent transparent transparent;
+        z-index: 1;
+    }
+}
+
+.shareInfoPresent {
+    margin-top: 20px;
+}
+
+.shareInfoDescr {
+    font: 14px/16px GilroyRegular;
+    color: #232323;
+    margin-top: 8px;
+}
+
+.shareInfoDescrSpan {
+    color: #656565;
+}
+
+.shareInfoProducts {
+    max-height: 140px;
+    margin-top: 4px;
+    margin-bottom: 10px;
+    overflow: auto;
+
+    &::-webkit-scrollbar {
+        width: 10px;
+        background: rgba(216, 216, 216, 0.5);
+    }
+
+    &::-webkit-scrollbar-thumb {
+        width: 6px;
+        background: #919191;
+    }
+}
+
+.shareInfoProductItem {
+    font: 14px/16px GilroyRegular;
+    margin-top: 8px;
+    padding-left: 18px;
+    position: relative;
+
+    &:before {
+        content: '';
+        position: absolute;
+        top: 6px;
+        left: 0;
+        width: 6px;
+        height: 6px;
+        border-radius: 50%;
+        background: #25716C;
+    }
+}
+
+.shareInfoProductLink {
+    text-decoration: none;
+    color: #25716C;
+    display: block;
+    line-height: 1.25;
+
+    &:before {
+        content: '+';
+    }
+
+    &:first-child {
+        &:before {
+            display: none;
+        }
+    }
+}
+
+.shareInfoProductDiscount {
+    text-decoration: none;
+    white-space: nowrap;
+    color: #DC4E41;
+}
+
+.shareInfoBtn {
+    font: 24px/28px GilroyRegular;
+    color: #FFFFFF;
+    width: 172px;
+    height: 40px;
+    border: 1px solid #DC4E41;
+    box-sizing: border-box;
+    background: #DC4E41;
+    cursor: pointer;
+    outline: none;
+    position: relative;
+
+    &:after {
+        content: url('./img/attentionWhite.svg');
+        position: absolute;
+        top: 7px;
+        right: 16px;
+    }
+
+    &.active {
+        background: whiteBasic;
+        color: #DC4E41;
+
+        &:after {
+            content: url('./img/attentionRed.svg');
+        }
     }
 }
