--- a/src/apps/client/ui/components/CartProduct/CartProduct.css
+++ b/src/apps/client/ui/components/CartProduct/CartProduct.css
@@ -46,6 +46,57 @@
     width: 100%;
 }
 
+.share {
+    font: 24px/28px GilroyRegular;
+    color: #DC4E41;
+    margin-bottom: 6px;
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+
+    &.active, &:hover {
+        .shareInfoMessage {
+            display: block;
+        }
+    }
+}
+
+.shareInfo {
+    font: 14px/16px GilroyRegular;
+    color: #232323;
+    display: inline;
+}
+
+.shareInfoMessage {
+    position: absolute;
+    left: 0;
+    bottom: calc(100% + 11px);
+    background: #FFFFFF;
+    box-shadow: 0px 0px 8px rgba(37, 113, 108, 0.3);
+    width: 264px;
+    padding: 10px 16px;
+    display: none;
+
+    &:after {
+        position: absolute;
+        left: 12px;
+        bottom: -16px;
+        content: '';
+        border-style: solid;
+        border-width: 22px 11px 0 11px;
+        border-color: #FFFFFF transparent transparent transparent;
+        z-index: 1;
+    }
+}
+
+.shareInfoIcon {
+    margin-left: 10px;
+
+    &:after {
+        content: url('./img/attentionRed.svg');
+    }
+}
+
 .productOption {
     display: flex;
     align-items: center;
