--- a/src/apps/client/ui/components/CartProduct/CartProduct.css
+++ b/src/apps/client/ui/components/CartProduct/CartProduct.css
@@ -1,3 +1,4 @@
+@value whiteBasic from '../../../../../css/colors.css';
 @value redBasic from '../../../../../css/colors.css';
 @value blackLight from '../../../../../css/colors.css';
 @value gray0 from '../../../../../css/colors.css';
@@ -48,7 +49,7 @@
 
 .share {
     font: 24px/28px GilroyRegular;
-    color: #DC4E41;
+    color: redBasic;
     margin-bottom: 6px;
     cursor: pointer;
     display: inline-block;
@@ -63,7 +64,7 @@
 
 .shareInfo {
     font: 14px/16px GilroyRegular;
-    color: #232323;
+    color: blackLight;
     display: inline;
 }
 
@@ -71,7 +72,7 @@
     position: absolute;
     left: 0;
     bottom: calc(100% + 11px);
-    background: #FFFFFF;
+    background: whiteBasic;
     box-shadow: 0px 0px 8px rgba(37, 113, 108, 0.3);
     width: 264px;
     padding: 10px 16px;
@@ -84,7 +85,7 @@
         content: '';
         border-style: solid;
         border-width: 22px 11px 0 11px;
-        border-color: #FFFFFF transparent transparent transparent;
+        border-color: whiteBasic transparent transparent transparent;
         z-index: 1;
     }
 }
