--- a/src/apps/client/ui/components/CallbackForm/CallbackForm.css
+++ b/src/apps/client/ui/components/CallbackForm/CallbackForm.css
@@ -187,7 +187,7 @@ label {
     left: 0;
     display: flex;
     justify-content: center;
-    align-items: center; 
+    align-items: center;
     width: 100%;
     height: 45px;
     font-size: 0;
@@ -239,4 +239,8 @@ label {
     letter-spacing: 0.02em;
     color: #FFF;
     text-align: left;
+
+    a {
+        color: whiteBasic;
+    }
 }
