--- a/src/apps/client/ui/components/Gallery/Gallery.css
+++ b/src/apps/client/ui/components/Gallery/Gallery.css
@@ -150,6 +150,7 @@
     font: 18px/21px GilroyRegular;
     margin: 15px auto;
     padding: 5px;
+    text-shadow: 0px 0px 3px rgba(0, 0, 0, 0.5), 0px 0px 3px #000000, 0px 0px 3px rgba(0, 0, 0, 0.5);
 
     &:after {
         content: url('./img/loupe.svg');
