--- a/src/apps/client/ui/components/PopupGallery/PopupGallery.css
+++ b/src/apps/client/ui/components/PopupGallery/PopupGallery.css
@@ -94,7 +94,9 @@
     width: 100%;
     min-width: 100%;
     height: 100%;
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     vertical-align: middle;
 }
 
@@ -103,9 +105,6 @@
     z-index: -1;
     max-width: 100%;
     max-height: 100%;
-    position: relative;
-    top: 50%;
-    transform: translate(0, -50%);
 }
 
 .slider{
@@ -113,7 +112,7 @@
     left: 0;
     transition: left .5s ease-in-out, height .5s ease-in-out;
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     width: 100%;
     height: 100%;
 }
