--- a/src/apps/client/ui/components/Header/Header.css
+++ b/src/apps/client/ui/components/Header/Header.css
@@ -2,6 +2,7 @@
 @value blackLight from '../../../../../css/colors.css';
 @value redBasic from '../../../../../css/colors.css';
 @value greenBasic from '../../../../../css/colors.css';
+@value blackBasic from '../../../../../css/colors.css';
 
 .header {
     display: block;
@@ -216,6 +217,7 @@
     align-items: center;
     justify-content: center;
     background-color: whiteBasic;
+    position: relative;
 }
 
 .menuBottom {
