free delivery from ...  and popup

--- a/src/apps/client/ui/components/Header/Header.css
+++ b/src/apps/client/ui/components/Header/Header.css
@@ -216,6 +216,7 @@
     align-items: center;
     justify-content: center;
     background-color: whiteBasic;
+    position: relative;
 }
 
 .menuBottom {
