--- a/src/apps/client/ui/components/AboutProduct/AboutProduct.css
+++ b/src/apps/client/ui/components/AboutProduct/AboutProduct.css
@@ -573,6 +573,7 @@
     color: greenBasic;
     display: block;
     line-height: 1.25;
+    font-family: GilroyRegular;
 
     &:first-child {
         &:before {
