--- a/src/apps/client/ui/components/DeliveryOffer/DeliveryOffer.css
+++ b/src/apps/client/ui/components/DeliveryOffer/DeliveryOffer.css
@@ -9,6 +9,7 @@
     right: 60px;
     display: flex;
     align-items: center;
+    display: none; /*  please remove this property to enable on desktop  */
 
     @media (max-width: 1200px) {
         display: none;
@@ -30,6 +31,7 @@
         margin-top: 28px;
         justify-content: center;
         border-bottom: 8px solid #F1F1F1;
+        display: none; /*  please remove this property to enable on mobile  */
     }
 }
 
