--- a/src/apps/client/ui/components/Card/Card.css
+++ b/src/apps/client/ui/components/Card/Card.css
@@ -15,7 +15,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    overflow: hidden;
+    /* overflow: hidden; */
     background: whiteBasic;
     text-decoration: none;
     outline: 2px solid transparent;
@@ -180,6 +180,14 @@
         flex-direction: column;
         justify-content: center;
     }
+
+    &:hover{
+        .hoverInformation{
+            transition: 1s;
+            max-height: 1000px;
+            padding: 15px;
+        }
+    }
 }
 
 .existText {
@@ -243,5 +251,40 @@
         line-height: 11px;
         bottom: 9px;
         left: 9px;
+    }
+}
+
+.hoverInformation{
+    transition: 1s;
+    max-height: 0px;
+    overflow: hidden;
+    position: absolute;
+    width: 100%;
+    display: flex;
+    z-index: 1;
+    justify-content: center;
+    background: whiteBasic;
+    /* padding: 15px; */
+}
+
+.btnBuy {
+    font: 24px/28px GilroyRegular;
+    color: whiteBasic;
+    padding: 6px 10px;
+    min-width: 202px;
+    border: 1px solid transparent;
+    outline: none;
+    background: blackLight;
+    cursor: pointer;
+    transition: .5s ease-out;
+
+    &:hover {
+        background-color: greenBasic;
+    }
+
+    &.active {
+        color: blackLight;
+        background-color: whiteBasic;
+        border-color: greenBasic;
     }
 }
