--- a/src/apps/client/ui/components/Card/Card.css
+++ b/src/apps/client/ui/components/Card/Card.css
@@ -4,6 +4,7 @@
 @value gray0 from '../../../../../css/colors.css';
 @value gray3 from '../../../../../css/colors.css';
 @value greenBasic from '../../../../../css/colors.css';
+@value blackLighter from '../../../../../css/colors.css';
 
 .product {
     width: 288px;
@@ -23,6 +24,14 @@
 
     &:hover {
         outline-color: greenBasic;
+
+        .hoverInformation{
+            transition: .3s;
+            max-height: 600px;
+            outline: 2px solid greenBasic;
+            /* overflow: visible; */
+            /* border-top: none; */
+        }
     }
 
     @media (max-width: 640px) {
@@ -180,14 +189,6 @@
         flex-direction: column;
         justify-content: center;
     }
-
-    &:hover{
-        .hoverInformation{
-            transition: 1s;
-            max-height: 1000px;
-            padding: 15px;
-        }
-    }
 }
 
 .existText {
@@ -255,16 +256,21 @@
 }
 
 .hoverInformation{
-    transition: 1s;
+    transition: .3s;
+    transition-delay: .1s;
     max-height: 0px;
     overflow: hidden;
     position: absolute;
-    width: 100%;
+    top: 100%;
+    left: 0;
+    width: 100% ;
     display: flex;
+    flex-direction: column;
     z-index: 1;
     justify-content: center;
     background: whiteBasic;
-    /* padding: 15px; */
+    outline: 2px solid transparent;
+    cursor: default;
 }
 
 .btnBuy {
@@ -272,11 +278,16 @@
     color: whiteBasic;
     padding: 6px 10px;
     min-width: 202px;
-    border: 1px solid transparent;
+    border: 2px solid transparent;
     outline: none;
     background: blackLight;
     cursor: pointer;
     transition: .5s ease-out;
+    
+
+    @media (max-width: 640px) {
+        font-size: 16px;
+    }
 
     &:hover {
         background-color: greenBasic;
@@ -285,6 +296,22 @@
     &.active {
         color: blackLight;
         background-color: whiteBasic;
-        border-color: greenBasic;
+        border-bottom:2px solid greenBasic;
     }
+}
+
+.sizesTitle {
+    font: 16px/18px GilroyRegular;
+    color: blackLighter;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    @media (max-width: 640px) {
+        font-size: 14px;
+    }
+}
+
+.sizesWrap{
+    margin: 10px auto 15px auto;
 }
