--- a/src/apps/client/ui/components/Cart/Cart.css
+++ b/src/apps/client/ui/components/Cart/Cart.css
@@ -50,11 +50,11 @@
     visibility: hidden;
     opacity: 0;
     transition: all 0.5s ease-in-out;
+}
 
-    &.active {
-        visibility: visible;
-        opacity: 1;
-    }
+.active {
+    visibility: visible;
+    opacity: 1;
 }
 
 .cover {
