--- a/src/apps/client/ui/components/Advantages/Advantages.css
+++ b/src/apps/client/ui/components/Advantages/Advantages.css
@@ -7,6 +7,13 @@
 .root {
     background: gray5;
     padding-bottom: 30px;
+
+    &.animated{
+        .advantage{
+            opacity: 1;
+            transform: translateY(0);
+        }
+     }
 }
 
 .contentWrap {
@@ -92,6 +99,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    transition: .5s ease;
+    opacity: 0;
+    transform: translateY(20px);
 
     &:last-child .advantageTitle {
         margin-top: 35px;
@@ -108,6 +118,18 @@
             margin-top: 20px;
         }
     }
+
+    &:nth-child(1){
+        transition-delay: 0;
+     }
+
+     &:nth-child(2){
+        transition-delay: .25s;
+      }
+
+      &:nth-child(3){
+        transition-delay: .5s;
+       }
 }
 
 .imgWrap {
