--- a/src/apps/client/ui/components/Advantages/Advantages.css
+++ b/src/apps/client/ui/components/Advantages/Advantages.css
@@ -13,6 +13,11 @@
             opacity: 1;
             transform: translateY(0);
         }
+
+        .title{
+            opacity: 1;
+            transform: translateY(0);
+        }
      }
 }
 
@@ -37,6 +42,9 @@
     color: blackBasic;
     text-align: center;
     position: relative;
+    transition: .5s ease;
+    opacity: 0;
+    transform: translateY(20px);
 
     &:before {
         content: "";
@@ -120,15 +128,15 @@
     }
 
     &:nth-child(1){
-        transition-delay: 0;
+        transition-delay: .25s;
      }
 
      &:nth-child(2){
-        transition-delay: .25s;
+        transition-delay: .5s;
       }
 
       &:nth-child(3){
-        transition-delay: .5s;
+        transition-delay: .75s;
        }
 }
 
