--- a/src/apps/client/ui/components/ProductsSlider/ProductsSlider.css
+++ b/src/apps/client/ui/components/ProductsSlider/ProductsSlider.css
@@ -202,6 +202,13 @@
         }
     }
 
+    &:hover{
+        &:before {
+             background: rgba(37, 113, 108, .5);
+            transition: background 0.25s ease-in;
+        }
+     }
+
     @media (max-width: 600px) {
         padding: 15px 12px;
     }
