--- a/src/apps/client/ui/pages/DeliveryAndPayment/DeliveryAndPayment.css
+++ b/src/apps/client/ui/pages/DeliveryAndPayment/DeliveryAndPayment.css
@@ -15,6 +15,17 @@
 .deliveryAndPaymentContainer {
     background-color: whiteBasic;
     height: calc(100% - 40px);
+
+    &.animated{
+        .title{
+            opacity: 1;
+            transform: translateY(0);
+        }
+        .options{
+            opacity: 1;
+            transform: translateY(0);
+        }
+     }
 }
 
 .content {
@@ -38,6 +49,9 @@
     color: blackLight;
     text-shadow: -0.2px 0 blackLight, 0 0.2px blackLight, 0.2px 0 blackLight, 0 -0.2px blackLight;
     position: relative;
+    transition: .5s ease;
+    opacity: 0;
+    transform: translateY(20px);
 
     @media (max-width: 768px) {
         margin-top: 20px;
@@ -88,6 +102,9 @@
     font-size: 14px;
     line-height: 21px;
     color: blackLight;
+    transition: .5s ease .75s;
+    opacity: 0;
+    transform: translateY(20px);
 
     @media (max-width: 600px) {
         flex-direction: column;
