--- a/src/apps/client/ui/components/Breadcrumbs/Breadcrumbs.css
+++ b/src/apps/client/ui/components/Breadcrumbs/Breadcrumbs.css
@@ -1,4 +1,5 @@
 @value blackLight from '../../../../../css/colors.css';
+@value greenBasic from '../../../../../css/colors.css';
 @value gray1 from '../../../../../css/colors.css';
 @value gray3 from '../../../../../css/colors.css';
 
@@ -21,6 +22,11 @@
   color: blackLight;
   text-decoration: none;
   white-space: nowrap;
+  transition: .3s ease;
+
+  &:hover{
+     color: greenBasic;
+   }
 
   &:before {
     content: "/";
@@ -36,5 +42,9 @@
   &:last-child {
     color: gray1;
     cursor: default;
+
+    &:hover{
+       color: gray1;
+    }
   }
 }
